ecommerce-helm/templates/postgrsql-headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name : postgres-headless
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
